CHANGELOG
=========
+-----------------------+
| VERSION: 0.6.1        |
+-----------------------+
BUGFIXES
24-10-06    Cleaned up ModuleGenerationMgr, added more error checking
14-09-06    Fixed potential security hole with tinyFCK (Andreas Singer)
10-09-06    Added missing dbdo include that caused error with caching enabled
            (romain)
10-09-06    Improvements to error handling for production environments (Dmitry
            Lakachauskis)
10-09-06    Fixed problem where CategoryNav block didn't work correctly for php4
            users (Steven Stremciuc)
10-09-06    Fixed horizontal scrolling in msie (Dmitry Lakachauskis)
10-09-06    Fixed redirect problem with articles (Julien Casanova)
10-09-06    Escaped problematic input for SGL_Emailer (Steven Stremciuc)
03-09-06    Fixed documentation to correctly reflect minimum PHP version required
            (falko)
03-09-06    Corrected tz values that didn't work on all linux systems (Steven
            Stremciuc)
02-09-06    Minimal install cannot select multiple languages (Steven Stremciuc)
02-09-06    Fixed infinite loop in s9y wrapper BlogMgr (romain)
02-09-06    Fixed javascript error in TinyFCK (Riccardo Magliocchetti)
31-08-06	Added detection of GD extension for media manager
30-08-06    Fixed whitespace in navigation file that caused header error on rebuild
30-08-06    Only check for multi sessions if option enabled
29-08-06    Fixed bugs in MediaMgr
19-08-06    Improved SQL parser regex to be able to catch tables like event-media

IMPROVEMENTS
26-10-06    Some very nice functionality added to the comment module including
            Akismet integration (Steven Stremciuc)
20-10-06    Added example REST client and server implementations (
              http://trac.seagullproject.org/browser/branches/0.6-bugfix/lib/SGL/Services/REST/Client.php
            and
              http://trac.seagullproject.org/browser/branches/0.6-bugfix/docs/developer/examples/modules/REST_server